# graduate_work

./: .gitignore  Dockerfile  README.md  main.py  makefile  model.py  pyproject.toml  start.py
examples/: input.dsl  input.json
handler/: create_best_diagram.py  get_best_diagram.py
utils/: temp_dir.py
